--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
                               </p>
                            </div>
                            <div class="vacancies__card-name">
-                              Водитель погруз
+                              Водитель погрузчик
                            </div>
                         </div>
                      </div>
@@ -899,12 +899,7 @@
                      время для уточнения деталей.
                   </p>
                   <div class="feedback__form">
-                     <form
-                        
-                        method="post"
-                        class="form"
-                        data-form
-                     >
+                     <form method="post" class="form" data-form>
                         <div class="form__row">
                            <input
                               class="input"
@@ -1024,15 +1019,25 @@
          <link rel="stylesheet" href="./assets/css/components/footer.css" />
          <div class="modal open" data-modal>
             <div class="modal__container">
-               <div class="modal__container-close icon-close" data-modal-close></div>
+               <div
+                  class="modal__container-close icon-close"
+                  data-modal-close
+               ></div>
                <div class="modal__container-inner">
-                  <img class="modal__image" src="./assets/images/modal.png" alt="" />
+                  <img
+                     class="modal__image"
+                     src="./assets/images/modal.png"
+                     alt=""
+                  />
                   <div class="modal__title">ОТПРАВЛЕНО</div>
                   <div class="modal__text">
                      Заявка уже у нас. <br />
                      Скоро выйдем на связь.
                   </div>
-                  <button class="modal__button button button--solid" data-modal-close>
+                  <button
+                     class="modal__button button button--solid"
+                     data-modal-close
+                  >
                      прекрасно
                   </button>
                </div>
