--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                               клиентов.
                            </p>
                         </div>
-                        <div class="production__image" data-text="Технологии">
+                        <div class="production__image">
                            <img
                               src="./assets/images/production-img.png"
                               alt=""
@@ -549,7 +549,7 @@
                               предоставлять лучшие изделия на рынке.
                            </p>
                         </div>
-                        <div class="production__image" data-text="Технологии">
+                        <div class="production__image">
                            <img
                               src="./assets/images/production-img2.png"
                               alt=""
@@ -573,7 +573,7 @@
                               соответствует самым высоким стандартам.
                            </p>
                         </div>
-                        <div class="production__image" data-text="Технологии">
+                        <div class="production__image">
                            <img
                               src="./assets/images/production-img3.png"
                               alt=""
@@ -1017,7 +1017,7 @@
             </div>
          </footer>
          <link rel="stylesheet" href="./assets/css/components/footer.css" />
-         <div class="modal open" data-modal>
+         <div class="modal" data-modal>
             <div class="modal__container">
                <div
                   class="modal__container-close icon-close"
