--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                            </ul>
                         </div>
                         <div class="header__menu-phone">
-                           <a href="">+ 7 ххх ххх-хх-хх</a>
+                           <a href="tel:+79173901759">+7 (917) 390 17 59</a>
+                           <a href="tel:+78432042451"> +7 (843) 204 24 51 </a>
                         </div>
                      </div>
                   </div>
@@ -948,16 +949,16 @@
                   <nav class="footer__nav">
                      <ul class="nav__list nav__list--col">
                         <li>
-                           <a href="#about">О компании</a>
+                           <a href="#about" data-anchor>О компании</a>
                         </li>
                         <li>
-                           <a href="#product">Продукция</a>
+                           <a href="#product" data-anchor>Продукция</a>
                         </li>
                         <li>
-                           <a href="#production">Производство</a>
+                           <a href="#production" data-anchor>Производство</a>
                         </li>
                         <li>
-                           <a href="#news">Пресс-центр</a>
+                           <a href="#news" data-anchor>Пресс-центр</a>
                         </li>
                      </ul>
                   </nav>
@@ -971,23 +972,33 @@
                </div>
 
                <div class="footer__col">
-                  <div class="footer__info">
-                     <div class="footer__info-item">
-                        <a href="">+7 (777) 777-77-77</a>
-                     </div>
-                     <div class="footer__info-item">
-                        Email:<a href="">info@mail.ru</a>
-                     </div>
-                     <div class="footer__info-item">
-                        Адрес: г. Город, ул. Улица, д. Х
-                     </div>
+                  <ul class="footer__info">
+                     <li class="footer__info-item">
+                        <div>
+                           <a href="tel:+79173901759"> +7 (917) 390 17 59 </a>
+                        </div>
+                        <div>
+                           <a href="tel:+78432042451"> +7 (843) 204 24 51 </a>
+                        </div>
+                     </li>
+
+                     <li class="footer__info-item">
+                        Email:<a href="mailto:lkm-trade@yandex.ru"
+                           >lkm-trade@yandex.ru</a
+                        >
+                     </li>
+                     <li class="footer__info-item">
+                        Адрес: Республика Татарстан, Казань, <br />
+                        Офис: Улица Достоевского, 52 <br />
+                        Склад: Улица Тэцевская 295
+                     </li>
 
                      <div class="show-md">
                         <div class="footer__privacy">
                            <a href="">Политика конфиденциальности</a>
                         </div>
                      </div>
-                  </div>
+                  </ul>
                   <div class="footer__dev">
                      <a href="https://saftech.net/" target="_blank">
                         <svg
