--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                      </div>
                      <div class="about__card">
                         <div class="about__card-icon icon-about-icon2"></div>
-                        <div class="about__card-title">483 тонны</div>
+                        <div class="about__card-title">10348 тонны</div>
                         <div class="about__card-text">
                            Продукции произведено за 2022 год
                         </div>
@@ -922,7 +922,8 @@
                      <li class="footer__info-item">
                         Адрес: Республика Татарстан, Казань, <br />
                         Офис: Улица Достоевского, 52 <br />
-                        Склад: Улица Тэцевская 295
+                        Производство: Улица Тэцевская 295
+                        Производство\Склад:  Улица. 3я Кленовая, 9
                      </li>
 
                      <div class="show-md">
