--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="/assets/css/libs.css" />
-      <link rel="stylesheet" href="/assets/css/root.css" />
-      <link rel="stylesheet" href="/assets/fonts/icomoon/style.css" />
-      <link rel="stylesheet" href="/assets/css/fonts.css" />
-      <link rel="stylesheet" href="/assets/css/slider.css" />
-      <link rel="stylesheet" href="/assets/css/main.css" />
-      <script src="/assets/js/libs.js"></script>
-      <script src="/assets/js/main.js"></script>
+      <link rel="stylesheet" href="./assets/css/libs.css" />
+      <link rel="stylesheet" href="./assets/css/root.css" />
+      <link rel="stylesheet" href="./assets/fonts/icomoon/style.css" />
+      <link rel="stylesheet" href="./assets/css/fonts.css" />
+      <link rel="stylesheet" href="./assets/css/slider.css" />
+      <link rel="stylesheet" href="./assets/css/main.css" />
+      <script src="./assets/js/libs.js"></script>
+      <script src="./assets/js/main.js"></script>
       <title>Авангард</title>
    </head>
    <body>
@@ -85,7 +85,7 @@
                   </div>
                </div>
             </header>
-            <link rel="stylesheet" href="/assets/css/components/header.css" />
+            <link rel="stylesheet" href="./assets/css/components/header.css" />
             <section class="hero">
                <div class="container container--border">
                   <div class="hero__inner">
@@ -747,7 +747,7 @@
          </section>
          <link rel="stylesheet" href="./assets/css/components/feedback.css" />
          <script src="https://unpkg.com/imask"></script>
-         <script src="/assets/js/validation.js"></script>
+         <script src="./assets/js/validation.js"></script>
          <div class="modal" data-modal>
             <div class="modal__container">
                <div
@@ -757,7 +757,7 @@
                <div class="modal__container-inner">
                   <img
                      class="modal__image"
-                     src="/assets/images/modal.png"
+                     src="./assets/images/modal.png"
                      alt=""
                   />
                   <div class="modal__title">ОТПРАВЛЕНО</div>
@@ -867,7 +867,7 @@
                </div>
             </div>
          </footer>
-         <link rel="stylesheet" href="/assets/css/components/footer.css" />
+         <link rel="stylesheet" href="./assets/css/components/footer.css" />
       </div>
    </body>
 </html>
