--- a/vacancies/index.html
+++ b/vacancies/index.html
@@ -2,14 +2,14 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="/assets/css/libs.css" />
-      <link rel="stylesheet" href="/assets/css/root.css" />
-      <link rel="stylesheet" href="/assets/fonts/icomoon/style.css" />
-      <link rel="stylesheet" href="/assets/css/fonts.css" />
-      <link rel="stylesheet" href="/assets/css/slider.css" />
-      <link rel="stylesheet" href="/assets/css/main.css" />
-      <script src="/assets/js/libs.js"></script>
-      <script src="/assets/js/main.js"></script>
+      <link rel="stylesheet" href="./assets/css/libs.css" />
+      <link rel="stylesheet" href="./assets/css/root.css" />
+      <link rel="stylesheet" href="./assets/fonts/icomoon/style.css" />
+      <link rel="stylesheet" href="./assets/css/fonts.css" />
+      <link rel="stylesheet" href="./assets/css/slider.css" />
+      <link rel="stylesheet" href="./assets/css/main.css" />
+      <script src="./assets/js/libs.js"></script>
+      <script src="./assets/js/main.js"></script>
       <title>Авангард</title>
    </head>
    <body>
@@ -85,7 +85,7 @@
                   </div>
                </div>
             </header>
-            <link rel="stylesheet" href="/assets/css/components/header.css" />
+            <link rel="stylesheet" href="./assets/css/components/header.css" />
          </div>
          <section class="vacancies">
             <div class="container">
@@ -244,7 +244,7 @@
                </div>
             </div>
          </section>
-         <link rel="stylesheet" href="/assets/css/components/vacancies.css" />
+         <link rel="stylesheet" href="./assets/css/components/vacancies.css" />
          <footer class="footer">
             <div class="container container--grid">
                <div class="footer__col">
@@ -337,7 +337,7 @@
                </div>
             </div>
          </footer>
-         <link rel="stylesheet" href="/assets/css/components/footer.css" />
+         <link rel="stylesheet" href="./assets/css/components/footer.css" />
       </div>
    </body>
 </html>
