--- a/contacts/index.html
+++ b/contacts/index.html
@@ -36,7 +36,7 @@
                               <a href="#feedback" data-anchor>Контакты</a>
                            </li>
                            <li>
-                              <a href="/vacancies/">Вакансии</a>
+                              <a href="./vacancies/">Вакансии</a>
                            </li>
                         </ul>
                      </nav>
