--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                            <a href="#news" data-anchor>Пресс-центр</a>
                         </li>
                         <li>
-                           <a href="/vacancies/">Вакансии</a>
+                           <a href="./vacancies/">Вакансии</a>
                         </li>
                      </ul>
                   </nav>
