--- a/contacts/index.html
+++ b/contacts/index.html
@@ -2,14 +2,14 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="./assets/css/libs.css" />
-      <link rel="stylesheet" href="./assets/css/root.css" />
-      <link rel="stylesheet" href="./assets/fonts/icomoon/style.css" />
-      <link rel="stylesheet" href="./assets/css/fonts.css" />
-      <link rel="stylesheet" href="./assets/css/slider.css" />
-      <link rel="stylesheet" href="./assets/css/main.css" />
-      <script src="./assets/js/libs.js"></script>
-      <script src="./assets/js/main.js"></script>
+      <link rel="stylesheet" href="/assets/css/libs.css" />
+      <link rel="stylesheet" href="/assets/css/root.css" />
+      <link rel="stylesheet" href="/assets/fonts/icomoon/style.css" />
+      <link rel="stylesheet" href="/assets/css/fonts.css" />
+      <link rel="stylesheet" href="/assets/css/slider.css" />
+      <link rel="stylesheet" href="/assets/css/main.css" />
+      <script src="/assets/js/libs.js"></script>
+      <script src="/assets/js/main.js"></script>
       <title>Авангард</title>
    </head>
    <body>
@@ -36,7 +36,7 @@
                               <a href="#feedback" data-anchor>Контакты</a>
                            </li>
                            <li>
-                              <a href="./vacancies/">Вакансии</a>
+                              <a href="/vacancies/">Вакансии</a>
                            </li>
                         </ul>
                      </nav>
@@ -85,7 +85,7 @@
                   </div>
                </div>
             </header>
-            <link rel="stylesheet" href="./assets/css/components/header.css" />
+            <link rel="stylesheet" href="/assets/css/components/header.css" />
          </main>
          <section class="contacts">
             <div class="container">
@@ -220,8 +220,8 @@
                </div>
             </div>
          </section>
-         <link rel="stylesheet" href="./assets/css/components/contact.css" />
-         <script src="./assets/js/contacts.js"></script>
+         <link rel="stylesheet" href="/assets/css/components/contact.css" />
+         <script src="/assets/js/contacts.js"></script>
          <footer class="footer">
             <div class="container container--grid">
                <div class="footer__col">
@@ -314,7 +314,7 @@
                </div>
             </div>
          </footer>
-         <link rel="stylesheet" href="./assets/css/components/footer.css" />
+         <link rel="stylesheet" href="/assets/css/components/footer.css" />
       </div>
    </body>
 </html>
