--- a/vacancies/index.html
+++ b/vacancies/index.html
@@ -14,11 +14,45 @@
    </head>
    <body>
       <div class="wrapper">
-         <main class="main">
-            <header class="header">
-               <div class="container container--border">
-                  <div class="header__inner">
-                     <nav class="header__nav">
+         <header class="header">
+            <div class="container">
+               <div class="header__inner">
+                  <nav class="header__nav">
+                     <ul class="nav__list">
+                        <li>
+                           <a href="#about" data-anchor>О компании</a>
+                        </li>
+                        <li>
+                           <a href="/product/">Продукция</a>
+                        </li>
+                        <li>
+                           <a href="#production" data-anchor>Производство</a>
+                        </li>
+                        <li>
+                           <a href="#news" data-anchor>Пресс-центр</a>
+                        </li>
+                        <li>
+                           <a href="/contacts/">Контакты</a>
+                        </li>
+                        <li>
+                           <a href="/vacancies/">Вакансии</a>
+                        </li>
+                     </ul>
+                  </nav>
+                  <div class="header__button">
+                     <a href="#feedback" class="button" data-anchor
+                        >Оставить заявку</a
+                     >
+                  </div>
+                  <div class="haeder__burger">
+                     <div class="burger" data-burger></div>
+                  </div>
+               </div>
+            </div>
+            <div class="header__menu">
+               <div class="container">
+                  <div class="header__menu-inner">
+                     <div class="header__menu-nav">
                         <ul class="nav__list">
                            <li>
                               <a href="#about" data-anchor>О компании</a>
@@ -39,54 +73,17 @@
                               <a href="/vacancies/">Вакансии</a>
                            </li>
                         </ul>
-                     </nav>
-                     <div class="header__button">
-                        <a href="#feedback" class="button" data-anchor
-                           >Оставить заявку</a
-                        >
                      </div>
-                     <div class="haeder__burger">
-                        <div class="burger" data-burger></div>
+                     <div class="header__menu-phone">
+                        <a href="tel:+79173901759">+7 (917) 390 17 59</a>
+                        <a href="tel:+78432042451"> +7 (843) 204 24 51 </a>
                      </div>
                   </div>
                </div>
-               <div class="header__menu">
-                  <div class="container">
-                     <div class="header__menu-inner">
-                        <div class="header__menu-nav">
-                           <ul class="nav__list">
-                              <li>
-                                 <a href="#about" data-anchor>О компании</a>
-                              </li>
-                              <li>
-                                 <a href="#product" data-anchor>Продукция</a>
-                              </li>
-                              <li>
-                                 <a href="#production" data-anchor
-                                    >Производство</a
-                                 >
-                              </li>
-                              <li>
-                                 <a href="#news" data-anchor>Пресс-центр</a>
-                              </li>
-                              <li>
-                                 <a href="#feedback" data-anchor>Контакты</a>
-                              </li>
-                              <li>
-                                 <a href="/vacancies/">Вакансии</a>
-                              </li>
-                           </ul>
-                        </div>
-                        <div class="header__menu-phone">
-                           <a href="tel:+79173901759">+7 (917) 390 17 59</a>
-                           <a href="tel:+78432042451"> +7 (843) 204 24 51 </a>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </header>
-            <link rel="stylesheet" href="/assets/css/components/header.css" />
-         </main>
+            </div>
+         </header>
+         <link rel="stylesheet" href="/assets/css/components/header.css" />
+
          <section class="vacancies">
             <div class="container">
                <div class="vacancies__inner">
@@ -245,15 +242,17 @@
             </div>
          </section>
          <link rel="stylesheet" href="/assets/css/components/vacancies.css" />
-         <div class="vacancies__modal modal " data-modal="vacancies">
+         <div class="vacancies__modal modal" data-modal="vacancies">
             <div class="modal__container modal__container--white">
                <div
                   class="modal__container-close icon-close"
                   data-modal-close
                ></div>
-               <div class="vacancies__modal_container-inner modal__container-inner">
+               <div
+                  class="vacancies__modal_container-inner modal__container-inner"
+               >
                   <h2 class="vacancies__modal-title title">ОСТАВИТЬ ЗАВЯКУ</h2>
-                  <form method="post" class="form" data-form>
+                  <form method="post" class="vacancies__form form" data-form>
                      <div class="form__col">
                         <input
                            class="input"
@@ -276,22 +275,28 @@
                            placeholder="Введите Телефон"
                            id="phone"
                         />
-                        <div class="custom-file-input">
-                           <label for="fileInput">
-                               <img src="attachment-icon.png" alt="Attachment Icon">
-                               Прикрепите файл
+                        <div class="file-field">
+                           <label for="fileInput" class="input__file">
+                              <i class="icon icon-file"></i>
+                              <span class="input__file-name">Прикрепите файл</span>
                            </label>
-                           <input type="file" id="fileInput" name="fileInput" accept="image/*" style="display: none;">
-                       </div>
+                           <input
+                              type="file"
+                              id="fileInput"
+                              name="fileInput"
+                              accept="image/*"
+                              style="display: none"
+                           />
+                        </div>
                      </div>
                      <div class="form__col">
                         <button
-                        type="submit"
-                        class="button button--solid"
-                        type="submit"
-                     >
-                        ОСТАВИТЬ ЗАВЯКУ
-                     </button>
+                           type="submit"
+                           class="button button--solid"
+                           type="submit"
+                        >
+                           ОСТАВИТЬ ЗАВЯКУ
+                        </button>
                      </div>
                   </form>
                </div>
